# OutreachAI

./: .gitignore  cold_reach_spec.md  render.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: coordinator.py  copywriter.py  followup.py  gap_analyzer.py  personalization.py  prospect.py  research.py  runner.py  scorer.py  warm_path.py
backend/app/agents/prompts/: coordinator.txt  copywriter.txt  followup.txt  gap_analyzer.txt  personalization.txt  prospect.txt  research.txt  scorer.txt  warm_path.txt
backend/app/api/routes/: auth.py  email.py  outreach.py
backend/app/models/: schemas.py
backend/app/services/: gmail.py  groq_client.py  sse_manager.py
backend/app/tools/: apollo.py  job_scraper.py  resume.py  tavily.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentFeed.tsx  ContactCard.tsx  EmailCard.tsx  FollowUpTimeline.tsx  GapAnalysisCard.tsx  InputForm.tsx  ResultsPanel.tsx  WarmPathCard.tsx
frontend/src/hooks/: useAuth.ts  useOutreach.ts  useSSE.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
seed/: demo_contacts.json
